--- a/sass/pages/_header.scss
+++ b/sass/pages/_header.scss
@@ -1,4 +1,5 @@
 @use '../abstracts';
+@use '../base';
 // header
 .header {
     position: fixed;
@@ -133,7 +134,7 @@
                     padding-left: .25rem;
                     padding-block: .15rem;
                     
-                    font-family: abstracts.$font-title;
+                    font-family: base.$font-title;
                     font-size: 1rem;
                     font-weight: 400;
                     text-transform: capitalize;
@@ -209,8 +210,7 @@
                                     display: block;
                                     font-size: 1rem;
                                     font-weight: 400;
-                                    font-family: abstracts.$font-content;
-                                    font-family: abstracts.$font-title;
+                                    font-family: base.$font-title;
                                     text-transform: capitalize;
 
                                     // LINK HOVER EFFECT
@@ -418,7 +418,7 @@
                             text-transform: capitalize;
                             display: block;
                             text-align: left;
-                            font-family: abstracts.$font-content;
+                            font-family: base.$font-content;
                             transition: .2s ease-in-out;
                             // border: 1px solid red;
 
