--- a/css/style.css
+++ b/css/style.css
@@ -322,11 +322,11 @@ form button::before, form button::after {
   transition: 0.25s ease;
 }
 form button::before {
-  background: linear-gradient(0deg, #750b20, #dd134c);
+  background: linear-gradient(0deg, #3f0d0d, #dc134c);
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.05), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.025rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 form button::after {
-  background: linear-gradient(0deg, #dc134c, #750b20);
+  background: linear-gradient(0deg, #dc134c, #3f0d0d);
   box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 2px rgba(221, 221, 221, 0.3), 3px 3px 3px rgba(0, 0, 0, 0.2);
   opacity: 0;
 }
@@ -548,10 +548,10 @@ form button:hover::after {
   color: #f4f4f4;
 }
 .btn.btn-primary::before {
-  background: linear-gradient(0deg, #750b20, #dd134c);
+  background: linear-gradient(0deg, #3f0d0d, #dc134c);
 }
 .btn.btn-primary::after {
-  background: linear-gradient(0deg, #dc134c, #750b20);
+  background: linear-gradient(0deg, #dc134c, #3f0d0d);
 }
 .btn.btn-secondary {
   color: #29323d;
@@ -866,14 +866,14 @@ form button:hover::after {
 }
 .hero .hero-cta::before {
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.05), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.025rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
-  background: linear-gradient(0deg, #750b20, #dd134c);
+  background: linear-gradient(0deg, #3f0d0d, #dc134c);
 }
 .hero .hero-cta::after {
   opacity: 1;
   z-index: -1;
   animation: 1s cta-btn infinite;
   transition: 0.25s;
-  background: linear-gradient(0deg, #dc134c, #750b20);
+  background: linear-gradient(0deg, #dc134c, #3f0d0d);
   box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
 }
 .hero .hero-cta span {
@@ -960,10 +960,10 @@ form button:hover::after {
   font-size: clamp(1rem, 2vw, 1.125rem);
 }
 .hero .hero-index-content .content-value .cta .btn::before {
-  background: linear-gradient(0deg, #750b20, #dd134c);
+  background: linear-gradient(0deg, #3f0d0d, #dc134c);
 }
 .hero .hero-index-content .content-value .cta .btn::after {
-  background: linear-gradient(0deg, #dc134c, #750b20);
+  background: linear-gradient(0deg, #dc134c, #3f0d0d);
 }
 .hero .hero-image {
   position: absolute;
@@ -2031,7 +2031,6 @@ form button:hover::after {
     display: block;
     font-size: 1rem;
     font-weight: 400;
-    font-family: "Montserrat", sans-serif;
     font-family: "Kanit", sans-serif;
     text-transform: capitalize;
   }
@@ -2427,14 +2426,14 @@ form button:hover::after {
 }
 .hero .hero-cta::before {
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.05), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.025rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
-  background: linear-gradient(0deg, #750b20, #dd134c);
+  background: linear-gradient(0deg, #3f0d0d, #dc134c);
 }
 .hero .hero-cta::after {
   opacity: 1;
   z-index: -1;
   animation: 1s cta-btn infinite;
   transition: 0.25s;
-  background: linear-gradient(0deg, #dc134c, #750b20);
+  background: linear-gradient(0deg, #dc134c, #3f0d0d);
   box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
 }
 .hero .hero-cta span {
@@ -2521,10 +2520,10 @@ form button:hover::after {
   font-size: clamp(1rem, 2vw, 1.125rem);
 }
 .hero .hero-index-content .content-value .cta .btn::before {
-  background: linear-gradient(0deg, #750b20, #dd134c);
+  background: linear-gradient(0deg, #3f0d0d, #dc134c);
 }
 .hero .hero-index-content .content-value .cta .btn::after {
-  background: linear-gradient(0deg, #dc134c, #750b20);
+  background: linear-gradient(0deg, #dc134c, #3f0d0d);
 }
 .hero .hero-image {
   position: absolute;
@@ -3444,11 +3443,11 @@ form button:hover::after {
   z-index: -1;
 }
 .work .work-container .item .item-header .item-cta a.cta-primary::before {
-  background: linear-gradient(0deg, #750b20, #dd134c);
+  background: linear-gradient(0deg, #3f0d0d, #dc134c);
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.05), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.025rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 .work .work-container .item .item-header .item-cta a.cta-primary::after {
-  background: linear-gradient(0deg, #dc134c, #750b20);
+  background: linear-gradient(0deg, #dc134c, #3f0d0d);
   box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
   opacity: 0;
 }
