--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,4 +1,5 @@
 @use '../abstracts';
+@use '../base';
 // FORM
 form {
     z-index: 2;
@@ -30,7 +31,7 @@ form {
             color: #fff;
             font-weight: 400;
             letter-spacing: .05rem;
-            font-family: abstracts.$font-title;
+            font-family: base.$font-title;
             text-transform: capitalize;
             transition: .3s;
         }
@@ -65,7 +66,7 @@ form {
                 // letter-spacing: .15rem;
                 opacity: 0;
                 transition: .25s;
-                font-family: abstracts.$font-content;
+                font-family: base.$font-content;
             }
 
             &:focus, &:hover {
@@ -90,7 +91,7 @@ form {
         padding:  1rem;
         color: #eee;
         background-color: abstracts.$span-crimson-dark;
-        font-family: abstracts.$font-content;
+        font-family: base.$font-content;
         font-weight: 500;
         font-size: 1rem;
         letter-spacing: .025rem;
