--- a/sass/pages/_footer.scss
+++ b/sass/pages/_footer.scss
@@ -1,4 +1,5 @@
 @use '../abstracts';
+@use '../base';
 // FOOTER
 #footer {
     background: abstracts.$overlay-blue-darkest;
@@ -76,7 +77,7 @@
                         text-transform: capitalize;
                         color: abstracts.$text-light;
                         font-weight: 400;
-                        font-family: abstracts.$font-title;
+                        font-family: base.$font-title;
                     }
 
                     a {
