--- a/sass/pages/_projects.scss
+++ b/sass/pages/_projects.scss
@@ -1,4 +1,5 @@
 @use '../abstracts';
+@use '../base';
 // projects
 #projects {
     // border: 2px solid red;
@@ -81,7 +82,7 @@
                         font-weight: 500;
                         text-transform: capitalize;
                         line-height: 1em;
-                        font-family: abstracts.$font-title;
+                        font-family: base.$font-title;
                         letter-spacing: .05rem;
                         margin-bottom: 1rem;
                         padding-bottom: .5rem;
