--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -1,6 +1,6 @@
 @use '../abstracts';
-@use '../base';
-// projects
+
+// PROJECTS SECTION
 #projects {
     // border: 2px solid red;
     padding: 10vh 5vw 10vh;
@@ -82,7 +82,7 @@
                         font-weight: 500;
                         text-transform: capitalize;
                         line-height: 1em;
-                        font-family: base.$font-title;
+                        font-family: abstracts.$font-title;
                         letter-spacing: .05rem;
                         margin-bottom: 1rem;
                         padding-bottom: .5rem;
