--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -1,5 +1,6 @@
 @use '../abstracts';
-@use '../base';
+
+// WORK SECTION 
 .work {
     min-height: 100vh;
     // background: #ddd;
@@ -23,7 +24,7 @@
             span {
                 color: #0007;
                 text-transform: capitalize;
-                font-family: base.$font-title;
+                font-family: abstracts.$font-title;
             }
             &::after {
                 content: '';
