--- a/sass/pages/_hero.scss
+++ b/sass/pages/_hero.scss
@@ -1,11 +1,7 @@
 @use '../abstracts';
 // HERO
 .banner {
-    width: 100%;
-    height: 95vh;
-    // background: $overlay-blue-darker;
-    position: relative;
-    overflow: hidden;
+    border: 3px solid red;
     isolation: isolate;
 
     // ABOUT PAGE BANNER
