--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,9 +1,2 @@
-@forward './about';
-@forward './contact';
-@forward './footer';
 @forward './design';
-@forward './header';
-@forward './hero';
-@forward './projects';
-@forward './skills';
-@forward './work';
+// @forward './hero';
