--- a/css/style.css
+++ b/css/style.css
@@ -1296,7 +1296,7 @@ form button:hover::after {
   width: 100%;
   isolation: isolate;
   transition: 0.25s;
-  z-index: 50;
+  z-index: 10;
 }
 .header::after {
   content: "";
@@ -1310,11 +1310,7 @@ form button:hover::after {
   transition: background-color 0.15s, box-shadow 1s;
 }
 
-.navbar {
-  height: 100%;
-  transition: 1s ease background-color;
-}
-.navbar #nav {
+#nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -1324,16 +1320,16 @@ form button:hover::after {
   z-index: 5;
 }
 @media (max-width: 450px) {
-  .navbar #nav {
+  #nav {
     padding: 0.5rem 5vw;
   }
 }
-.navbar #nav .logo {
+#nav .logo {
   transition: 1s ease;
   opacity: 1;
   transition: 1s;
 }
-.navbar #nav .logo p {
+#nav .logo p {
   background-color: #0a0d0f;
   color: #f4f4f4;
   padding-left: 0.25rem;
@@ -1347,11 +1343,11 @@ form button:hover::after {
   transition: 0.5s;
 }
 @media (min-width: 768px) {
-  .navbar #nav .logo p {
+  #nav .logo p {
     font-size: 1.25rem;
   }
 }
-.navbar #nav .logo p span {
+#nav .logo p span {
   padding-right: 0.25rem;
   background: linear-gradient(#f4f4f4, #fff);
   background: inherit;
@@ -1359,8 +1355,22 @@ form button:hover::after {
   border-radius: 0;
   transition: 0.2s;
 }
+#nav .nav-list ul {
+  transition: 0.5s;
+}
+#nav .nav-list ul li {
+  list-style: none;
+}
+#nav .nav-list ul li a {
+  text-decoration: none;
+  color: #f4f4f4;
+  text-transform: capitalize;
+  display: block;
+  font-weight: 400;
+  font-family: "Montserrat", sans-serif;
+}
 @media (max-width: 820px) {
-  .navbar #nav .nav-list .links-container {
+  #nav .nav-list .links-container {
     position: absolute;
     top: 7vh;
     left: 100%;
@@ -1371,7 +1381,7 @@ form button:hover::after {
     transition: 0.5s ease;
     z-index: 5;
   }
-  .navbar #nav .nav-list .links-container ul {
+  #nav .nav-list .links-container ul {
     margin: 1rem 5vw 1rem;
     background: #29323d;
     padding: 0.5rem 0;
@@ -1388,17 +1398,18 @@ form button:hover::after {
     overflow-y: auto;
     overflow-x: hidden;
   }
-  .navbar #nav .nav-list .links-container ul li {
-    transform: translateX(1.5rem);
+  #nav .nav-list .links-container ul li {
     opacity: 0;
     transition: 0.5s;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    margin: 0 auto 0.25rem;
+    margin: 0 auto 0.5rem;
     width: 95%;
   }
-  .navbar #nav .nav-list .links-container ul li a {
+  #nav .nav-list .links-container ul li a {
+    transform: translateX(1.5rem);
+    opacity: 0;
     margin-right: auto;
     padding: 0;
     width: 50%;
@@ -1407,8 +1418,9 @@ form button:hover::after {
     font-weight: 400;
     font-family: "Kanit", sans-serif;
     text-transform: capitalize;
+    transition: 0.5s;
   }
-  .navbar #nav .nav-list .links-container ul li a::after {
+  #nav .nav-list .links-container ul li a::after {
     content: attr(data-after);
     position: absolute;
     top: 50%;
@@ -1420,17 +1432,30 @@ form button:hover::after {
     z-index: -1;
     transition: 0.3s ease letter-spacing;
   }
-  .navbar #nav .nav-list .links-container ul li a.active {
+  #nav .nav-list .links-container ul li a.active {
     color: #b3c0cc;
   }
-  .navbar #nav .nav-list .links-container ul li i {
+  #nav .nav-list .links-container ul li i {
     width: 2.5rem;
     text-align: center;
     padding: 0.5rem;
     color: #f4f4f4;
     background: #15191e;
+    margin-right: 0.5em;
+    border-radius: 0.25rem;
   }
-  .navbar #nav .nav-list .links-container .contact-links {
+  #nav .nav-list .links-container ul li:hover a {
+    color: #b3c0cc;
+    transition: 0.25s;
+  }
+  #nav .nav-list .links-container ul li:hover a::after {
+    transform: translate(-50%, -50%) scale(1);
+    letter-spacing: initial;
+  }
+  #nav .nav-list .links-container ul li:hover a i {
+    color: #b3c0cc;
+  }
+  #nav .nav-list .links-container .contact-links {
     background: #29323d;
     overflow-x: hidden;
     overflow-y: auto;
@@ -1440,7 +1465,7 @@ form button:hover::after {
     padding: 1rem;
     border-radius: 0.5rem;
   }
-  .navbar #nav .nav-list .links-container .contact-links a {
+  #nav .nav-list .links-container .contact-links a {
     opacity: 0;
     transform: translateY(1rem);
     color: #f4f4f4;
@@ -1448,177 +1473,107 @@ form button:hover::after {
     margin-bottom: 1rem;
     transition: 0.5s;
   }
-  .navbar #nav .nav-list .links-container .contact-links a i {
+  #nav .nav-list .links-container .contact-links a i {
     margin-right: 0.25rem;
     padding-right: 0.25rem;
     width: 1.5rem;
     border-right: 1px solid #b3c0cc;
   }
-  .navbar #nav .nav-list .links-container.active {
+  #nav .nav-list .links-container.active {
     left: 0;
     z-index: 50;
   }
-  .navbar #nav .nav-list .links-container.active .nav-logo {
+  #nav .nav-list .links-container.active .nav-logo {
     transition: 1.5s;
     opacity: 1;
     transform: translateX(0);
   }
-  .navbar #nav .nav-list .links-container.active ul li {
+  #nav .nav-list .links-container.active ul li {
     transition: 0.5s;
+    opacity: 1;
+  }
+  #nav .nav-list .links-container.active ul li a {
     transform: translateX(0);
     opacity: 1;
   }
-  .navbar #nav .nav-list .links-container.active ul li i {
+  #nav .nav-list .links-container.active ul li i {
     transition: 1s ease 0.8s;
   }
-  .navbar #nav .nav-list .links-container.active ul li:nth-child(1) {
+  #nav .nav-list .links-container.active ul li:nth-child(1) a {
     transition-delay: 0.3s;
   }
-  .navbar #nav .nav-list .links-container.active ul li:nth-child(2) {
+  #nav .nav-list .links-container.active ul li:nth-child(2) a {
     transition-delay: 0.35s;
   }
-  .navbar #nav .nav-list .links-container.active ul li:nth-child(3) {
+  #nav .nav-list .links-container.active ul li:nth-child(3) a {
     transition-delay: 0.4s;
   }
-  .navbar #nav .nav-list .links-container.active ul li:nth-child(4) {
+  #nav .nav-list .links-container.active ul li:nth-child(4) a {
     transition-delay: 0.45s;
   }
-  .navbar #nav .nav-list .links-container.active ul li:nth-child(5) {
+  #nav .nav-list .links-container.active ul li:nth-child(5) a {
     transition-delay: 0.5s;
   }
-  .navbar #nav .nav-list .links-container.active ul li:nth-child(6) {
+  #nav .nav-list .links-container.active ul li:nth-child(6) a {
     transition-delay: 0.55s;
   }
-  .navbar #nav .nav-list .links-container.active ul li:nth-child(7) {
+  #nav .nav-list .links-container.active ul li:nth-child(7) a {
     transition-delay: 0.6s;
   }
-  .navbar #nav .nav-list .links-container.active .contact-links a {
+  #nav .nav-list .links-container.active .contact-links a {
     opacity: 1;
     transform: translateY(0);
   }
-  .navbar #nav .nav-list .links-container.active .contact-links a:nth-child(1) {
+  #nav .nav-list .links-container.active .contact-links a:nth-child(1) {
     transition-delay: 0.6s;
   }
-  .navbar #nav .nav-list .links-container.active .contact-links a:nth-child(2) {
+  #nav .nav-list .links-container.active .contact-links a:nth-child(2) {
     transition-delay: 0.65s;
   }
-  .navbar #nav .nav-list .links-container.active .contact-links a:nth-child(3) {
+  #nav .nav-list .links-container.active .contact-links a:nth-child(3) {
     transition-delay: 0.7s;
   }
-  .navbar #nav .nav-list .links-container.active .contact-links a:nth-child(4) {
+  #nav .nav-list .links-container.active .contact-links a:nth-child(4) {
     transition-delay: 0.75s;
   }
-  .navbar #nav .nav-list .links-container.active .contact-links a:hover i {
+  #nav .nav-list .links-container.active .contact-links a:hover i {
     transition: 0.25s;
     color: #b3c0cc;
   }
 }
-.navbar #nav .nav-list .links-container .nav-logo {
-  margin: 0.5rem 5vw 1rem;
-  opacity: 1;
-  z-index: 1;
-  width: 10rem;
-  border-radius: 5px;
-  position: sticky;
-  top: 0.5rem;
-  transform: translateX(50%);
-  transition: 1s ease;
-  outline: none;
-  overflow: hidden;
-  border: 2px solid #ead2a15e;
-  background: #29323d;
-}
-.navbar #nav .nav-list .links-container .nav-logo img {
-  width: 100%;
-  height: auto;
-}
-@media (min-width: 768px) {
-  .navbar #nav .nav-list .links-container .nav-logo {
-    width: 20%;
-  }
-}
-.navbar #nav .nav-list ul {
-  transition: 0.5s;
-}
-.navbar #nav .nav-list ul li {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  padding: 0.25rem;
-}
-.navbar #nav .nav-list ul li a {
-  text-decoration: none;
-  color: #f4f4f4;
-  text-transform: capitalize;
-  display: block;
-  font-weight: 400;
-  text-align: left;
-  font-family: "Montserrat", sans-serif;
-  transition: 0.2s ease-in-out;
-}
-.navbar #nav .nav-list ul li i {
-  margin-right: 0.5em;
-  padding: 0;
-  text-align: left;
-  border-radius: 5px;
-}
-.navbar #nav .nav-list ul li:hover a {
-  color: #b3c0cc;
-  transition: 0.25s;
-}
-.navbar #nav .nav-list ul li:hover a::after {
-  transform: translate(-50%, -50%) scale(1);
-  letter-spacing: initial;
-}
-.navbar #nav .nav-list ul li:hover a i {
-  color: #b3c0cc;
-}
 @media (min-width: 820px) {
-  .navbar #nav .nav-list {
-    padding: 1rem 0;
-    height: 100%;
-  }
-  .navbar #nav .nav-list .nav-logo {
+  #nav .nav-list .nav-logo {
     display: none;
   }
-  .navbar #nav .nav-list .hamburger {
+  #nav .nav-list .hamburger {
     display: none;
   }
-  .navbar #nav .nav-list ul {
+  #nav .nav-list ul {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    gap: 0.5rem;
-    height: auto;
-    width: 100%;
-    width: fit-content;
+    gap: 1rem;
     background-color: transparent;
-    position: absolute;
-    right: 5vw;
-    top: 50%;
-    transform: translateY(-50%);
   }
-  .navbar #nav .nav-list ul li {
+  #nav .nav-list ul li {
     position: relative;
-    display: flex;
-    align-items: center;
   }
-  .navbar #nav .nav-list ul li::before {
+  #nav .nav-list ul li::before {
     position: absolute;
     content: "";
-    bottom: 0rem;
+    bottom: -0.25rem;
     left: 50%;
     transform: translateX(-50%);
     width: 0%;
     height: 2px;
     background-color: #b3c0cc;
-    transition: 0.3s ease;
+    transition: 0.25s ease;
   }
-  .navbar #nav .nav-list ul li:hover::before {
+  #nav .nav-list ul li:hover::before {
     width: 50%;
     opacity: 1;
   }
-  .navbar #nav .nav-list ul li a {
+  #nav .nav-list ul li a {
     font-size: 0.95rem;
     padding: 0.25rem;
     margin: 0 auto;
@@ -1628,38 +1583,35 @@ form button:hover::after {
     color: #f4f4f4;
     transition: 0.25s;
   }
-  .navbar #nav .nav-list ul li a::after {
+  #nav .nav-list ul li a::after {
     display: none;
   }
-  .navbar #nav .nav-list ul li a.active {
+  #nav .nav-list ul li a.active {
     color: #b3c0cc;
   }
-  .navbar #nav .nav-list ul li a.active::before {
+  #nav .nav-list ul li a.active::before {
     width: 50%;
     opacity: 1;
   }
-  .navbar #nav .nav-list ul li i {
+  #nav .nav-list ul li i {
     display: none;
   }
-  .navbar #nav .nav-list ul li:hover a {
+  #nav .nav-list ul li:hover a {
     transition: 0.3s ease;
     color: #f4f4f4;
   }
-  .navbar #nav .nav-list ul li:hover i {
+  #nav .nav-list ul li:hover i {
     transition: 0.3s;
     color: #ead2a1;
   }
-  .navbar #nav .nav-list ul li.active a {
+  #nav .nav-list ul li.active a {
     color: #ead2a1;
   }
-  .navbar #nav .nav-list ul li.active i {
-    color: #ead2a1;
-  }
-  .navbar #nav .nav-list ul.active {
+  #nav .nav-list ul.active {
     background: none;
     box-shadow: none;
   }
-  .navbar #nav .nav-list .contact-links {
+  #nav .nav-list .contact-links {
     display: none;
   }
 }
@@ -1668,7 +1620,7 @@ form button:hover::after {
   background: transparent;
   box-shadow: 0rem 1rem 1rem transparent;
 }
-.hero-header .navbar #nav .logo {
+.hero-header #nav .logo {
   transform: translateY(-10vh);
 }
 
@@ -1677,19 +1629,12 @@ form button:hover::after {
   background: #15191e;
   box-shadow: 0.015rem 0.015rem 0.5rem rgba(41, 50, 60, 0.2), 0rem 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
 }
-@media (min-width: 1024px) {
-  .header-io {
-    height: 8vh;
-    transition: 0.25s;
-    border: none;
-  }
-}
-.header-io .header #nav .logo {
+.header-io #nav .logo {
   opacity: 1;
   transform: translateY(0);
   transition: 1s;
 }
-.header-io .header #nav .nav-list ul li {
+.header-io #nav .nav-list ul li {
   opacity: 1;
 }
 .header-io.active-header #nav .logo {
