--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -36,7 +36,7 @@
     z-index: 5;
 
     @include abstracts.xsm {
-        padding: .5rem 5vw;
+        padding: .25rem 5vw;
     }
 
     // HEADER LOGO
@@ -54,6 +54,7 @@
             font-family: abstracts.$font-title;
             font-size: 1.125rem;
             font-size: clamp(1rem, 2vw, 1.125rem);
+            font-size: abstracts.$font-clamp-sm;
             font-weight: 400;
             text-transform: capitalize;
             border-radius: abstracts.$border-radius-sm;
